CHANGELOG

2.0.10
*	PHP 5.4-ready
*	Bug fix: PHP 5.4's deflate() triggers intermittent data error
*	Bug fix: exists() causes persistent sessions
*	Bug fix: set() COOKIE variable borked [[Bug #3489220]

2.0.9
*	Added ReSTful class support for __call
*	Numeric-indexed elements in URI path segments of wildcard routes (/*)
	maintained
*	Session-based cookies now use JAR global settings
*	Axon erase() now allows named parameters in query condition
*	Returning FALSE from beforeRoute() or afterRoute() aborts execution of
	subsequent functions/methods in chained routes
*	config() refactored; TTL and throttle parameters in [routes] and [maps]
	now compiled properly
*	NEW: Google geocode() returns geographical coordinates of specified
	address (regular string)
*	Bug fix: Axon nullable fields handled incorrectly
*	Bug fix: Empty variable in config file (#3462233)
*	Bug fix: Views rendered multiple times when multiple GUI paths are defined
*	Bug fix: Some import files in function chains fail to execute
*	Bug fix: Incorrect routing for URL-encoded paths

2.0.8
*	ISO 3166 alpha-2 country codes rebuilt
*	Bug fix: Unable to access ad hoc fields in templates
*	Bug fix: Invalid SQL syntax when erase() is invoked on NULL condition
*	Bug fix: stop() switches to incorrect directory
*	Bug fix: magic_quotes_gpc check
*	Bug fix: Variables in ICU formatted text
*	Bug fix: config() doesn't trim whitespaces

2.0.7
*	Added routing support for Unicode characters in URL path
*	Bug fix: Derivation of $_SERVER['DOCUMENT_ROOT'] on VirtualDocumentRoot-
	configured hosts
*	Bug fix: Dupe cache keys in some SQL prepared statements
*	Bug fix: MySQL's SHOW and EXPLAIN not recognized by Axon
*	Code cleanup (unused variables)

2.0.6
*	http() now supports basic authentication
*	Renamed COOKIES global variable (default cookie configuration) to JAR;
	This should eliminate confusion with PHP's global $_COOKIE and the
	framework's COOKIE variable
*	Autoloader refactored
*	More performance optimizations